--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@ title: Piter United
 
 <head>
    <!-- HTML meta refresh URL redirection -->
+   <!--
    <meta http-equiv="refresh"
    content="0; url= /main.html">
+	-->
+   
+   <meta http-equiv="refresh"
+   content="0; url= /itgm/itgm.html">
 </head>
