--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
----
-layout: default
-title: Piter United
----
+<html>
+	<head>
+	   <!-- HTML meta refresh URL redirection -->
+	   <meta http-equiv="refresh"
+	   content="0; url= /itgm/itgm.html">
+	</head>
+	<body>
+		---
+		layout: default
+		title: Piter United
+		---
+	</body>
+</html>
 
-<head>
-   <!-- HTML meta refresh URL redirection -->
-   <meta http-equiv="refresh"
-   content="0; url= /itgm/itgm.html">
-</head>
