--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -34,8 +34,12 @@ title: IT Global Meetup
 
 							<li class="social-link"><a href="" data-type="googleplus" data-url="piter-united.ru/itgm/itgm.html" data-description="IT Global Meetup #4 в СПб. 27 февраля 2015." data-media=""><i class="icon social_googleplus"></i></a></li>
 							-->
-
-							<li><script type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script><div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="small" data-yashareQuickServices="vkontakte,facebook,twitter,gplus" data-yashareTheme="counter"></div></li>
+							<!--
+							<li><script type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script>
+								<div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="small" data-yashareQuickServices="vkontakte,facebook,twitter,gplus" data-yashareTheme="counter" data-yashareTitle="IT Global Meetup #4" data-yashareDescription="27 февраля 2015, с 17.00 до 23.00. Слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - пр. Медиков 3" data-yashareLink="http://piter-united.ru/itgm/itgm.html" data-yashareImage="/itgm/img/itgm_logo.png">
+								</div>
+							</li>
+						-->
 
 						</ul>
 						<div class="sidebar-menu-toggle"><i class="icon icon_menu"></i></div>
@@ -63,7 +67,9 @@ title: IT Global Meetup
 			
 					<div class="widget">
 						<ul class="social-profiles">
+							<!--
 							<li><script type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script><div class="yashare-auto-init" data-yashareL10n="ru" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,gplus" data-yashareTheme="counter"></div></li>
+						-->
 						</ul>
 					</div>
 			
@@ -513,7 +519,9 @@ title: IT Global Meetup
 		
 			<div class="row">
 				<div class="col-sm-12 text-center">
+					<!--
 					<script type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script><div class="yashare-auto-init" data-yashareL10n="ru" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,gplus" data-yashareTheme="counter"></div>	
+				-->
 				</div>
 			</div><!--end of row-->
 		</div><!--end of container-->
