--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -294,6 +294,7 @@ title: IT Global Meetup
 				</div>
 				
 			</div><!--end of row-->
+		 <br>
          <div class="row schedule">
          	<h1>Программа сообществ</h1>
             {% assign timeFrames = "19:00|20:00|21:00|22:00" | split: "|" %}
@@ -356,7 +357,7 @@ title: IT Global Meetup
                             {% endfor %}
                             </ul>
                         </div>
-                        <button class="btn" data-toggle="modal" data-target="#someModalForm">Подать заявку </button>
+                        <button class="btn" data-toggle="modal" data-target="#someModalForm">Хочу выступить!</button>
                     </div>
                 {% endfor %}
             </div>
