Large modal form add gray background change more button

--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -362,7 +362,7 @@ title: IT Global Meetup
                 {% endfor %}
             </div>
             <div id="someModalForm" class="modal">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                   <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -377,7 +377,7 @@ title: IT Global Meetup
               </div>
             </div>
 			</div><!--end of row-->
-            <div class="scheduleExpand">...</div>
+            <a class="scheduleExpand" title="Показать программы всех сообществ" href="#">Все сообщества</a>
         </div><!--end of container-->
 	</section>
 	
