--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -261,7 +261,7 @@ title: IT Global Meetup
 							</div>
 							
 							<div class="schedule-text">
-								<p> Проанализировав проблемы и предложения участников оставивших "обратную связь" после прошлого мероприятия, мы решили сделать четкую временную сетку активностей на островках. Все общение на островках будет разбито на 40-ка минутные временные секции (19.00-19.40, 20.00-20.40 и т.д.) с 20-и минутными перерывами между ними. В рамках этих 40-ка минутных секций будет происходить обмен опытом и мнениями по предварительно-подготовленным темам, которые предложены активистами, участниками и возможно Вами!
+								<p> Проанализировав проблемы и предложения участников оставивших "обратную связь" после прошлого мероприятия, мы решили сделать четкую временную сетку активностей на островках. Все общение на островках будет разбито на сорокаминутные (40 мин.) временные секции (19.00-19.40, 20.00-20.40 и т.д.) с двадцатиминутными (20 мин.) перерывами между ними. В рамках этих 40-минутных секций будет происходить обмен опытом и мнениями по заранее подготовленным темам, которые предложены активистами, участниками и возможно Вами!
 								</p>
 							</div>
 							
