--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -517,7 +517,9 @@ title: IT Global Meetup
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Отмена</span></button>
 	        <h4 class="modal-title" id="myModalLabel">Регистрация</h4>
+	        <p> На данный момент регистрация на мероприятие окончена. <br>Всех кто не успел зарегистрироваться ждем на следующем IT Global Meetup #5, который состоится в мае 2015 года. Следите за анонсами!</p>
 	      </div>
+	      <!--
 	      <div class="modal-body">
 	        <a href="http://piter-united.timepad.ru/event/174241/" data-twf-placeholder="yes">Перейти к заказу билетов</a>
 	        <script type="text/javascript" defer="defer" data-timepad-customized="2669" data-twf2s-event--id="174241" data-timepad-widget-v2="event_register" src="//timepad.ru/js/tpwf/loader/min/loader.js"></script>
@@ -525,6 +527,7 @@ title: IT Global Meetup
 	      <div class="modal-footer">
 	      	<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Отмена</span></button>
 	      </div>
+	  -->
 	    </div>
 	  </div>
 	</div>
@@ -595,7 +598,7 @@ title: IT Global Meetup
 				<div class="col-sm-6">
 					<ul class="contact-methods">
 						<li><i class="icon pe-7s-mail"></i><span>piterunited@gmail.com</span></li>
-						<li><i class="icon pe-7s-phone"></i><span>+7(921)919-00-25</span></li>
+						<li><i class="icon pe-7s-phone"></i><span></span></li>
 						<li><i class="icon pe-7s-map-marker"></i><span>Санкт-Петербург</span></li>
 					</ul>
 				</div>
