programm and infopartners

--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -297,7 +297,7 @@ title: IT Global Meetup
 		 <br>
          <div class="row schedule">
          	<h1>Программа сообществ</h1>
-            {% assign timeFrames = "19:00|20:00|21:00|22:00" | split: "|" %}
+            {% assign timeFrames = "13:00|14:00|15:00|16:00" | split: "|" %}
             <div class=" col-md-5 col-sm-6">
                 <table class="table table-hover scheduleTable">
                   <thead>
@@ -377,7 +377,7 @@ title: IT Global Meetup
               </div>
             </div>
 			</div><!--end of row-->
-            <a class="scheduleExpand" title="Показать программы всех сообществ" href="#">Просмотреть всю программу...</a>
+            <!-- <a class="scheduleExpand" title="Показать программы всех сообществ" href="#">Просмотреть всю программу...</a> -->
         </div><!--end of container-->
 	</section>
 	
