floating share menu
TODO:
- fix its position
- correct items (socials + links)

--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -149,10 +149,10 @@
           }
         })
       ;
-      /*$('.overlay').visibility({
+      $('.overlay').visibility({
         type: 'fixed',
         offset: 80
-      });*/      
+      });     
       // create sidebar and attach to menu open
       $('.ui.sidebar')
         .sidebar('attach events', '.toc.item')
@@ -195,13 +195,13 @@
 <!-- Page Contents -->
 <div class="pusher">
 
-  <!--<div class="overlay">
+  <div class="overlay">
     <div class="ui labeled icon vertical menu">
       <a class="item"><i class="twitter icon"></i> Tweet</a>
       <a class="item"><i class="facebook icon"></i> Share</a>
       <a class="item"><i class="mail icon"></i> E-mail</a>
     </div>
-  </div>-->
+  </div>
 
   <!-- First Slide -->
   <div class="ui inverted vertical stripe firstslide segment">
