anchor to "Programme" CTA

--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -259,7 +259,7 @@
       <div class="row">
         <div class="center aligned column">
           <div class="ui huge primary button">Зарегистрироваться</div>
-          <div class="ui huge basic inverted button">Программа</div>
+          <a class="ui huge basic inverted button" href="#programme_a">Программа</a>
         </div>
       </div>
     </div>
