--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -43,7 +43,7 @@
     }
 
     .ui.vertical.stripe {
-      padding: 4em 0em;
+      padding: 2em 0em;
     }
     /*.ui.vertical.stripe h3 {
       font-size: 2em;
@@ -471,48 +471,54 @@
 
   <!-- People -->
 
-  <div id="people" class="ui vertical strip segment">
-    <div class="ui center aligned container">
+  <div id="people" class="ui vertical stripe segment">
+    <a class="anchor" id="people_a"></a>
+    <div class="ui center aligned header container">
         <h1>
-        Персоналии
-        <a class="anchor" id="people_a"></a>
+        Персоналии      
         </h1>      
     </div> 
-    <div class="ui stackable two column grid items">
-      
-      <div class="column item">
-        <div class="ui small image">
-          <img src="assets/images/avatar/nan.jpg">
-        </div>
-        <div class="content">
-          <div class="header">Никита Ефимов</div>
-          <div class="meta">
-            <span>Просто клевый парень, Selectel</span>          
-          </div>
-          <div class="description">
-            <p>
-              Не следует, однако забывать, что укрепление и развитие структуры требуют от нас анализа дальнейших направлений развития. Товарищи! дальнейшее развитие различных форм деятельности требуют определения и уточнения соответствующий условий активизации.
-            </p>
-          </div>
-        </div>
-      </div> 
-      <div class="item column">
-        <div class="ui small image">
-          <img src="assets/images/avatar/nan.jpg">
-        </div>
-        <div class="content">
-          <div class="header">Никита Ефимов</div>
-          <div class="meta">
-            <span>Просто клевый парень, Selectel</span>
-          </div>
-          <div class="description">
-            <p>
-              Не следует, однако забывать, что укрепление и развитие структуры требуют от нас анализа дальнейших направлений развития. Товарищи! дальнейшее развитие различных форм деятельности требуют определения и уточнения соответствующий условий активизации.
-            </p>
-          </div>
-        </div>
-      
-      </div>            
+    <div class="ui stackable two column grid">
+      <div class="column">
+        <div class="ui items">
+          <div class="item">
+            <div class="ui small image">
+              <img src="assets/images/avatar/nan.jpg">
+            </div>
+            <div class="content">
+              <div class="header">Никита Ефимов</div>
+              <div class="meta">
+                <span>Просто клевый парень, Selectel</span>          
+              </div>
+              <div class="description">
+                <p>
+                  Не следует, однако забывать, что укрепление и развитие структуры требуют от нас анализа дальнейших направлений развития. Товарищи! дальнейшее развитие различных форм деятельности требуют определения и уточнения соответствующий условий активизации.
+                </p>
+              </div>
+            </div>
+          </div>  
+        </div>       
+      </div>
+      <div class="column">
+        <div class="ui items">
+          <div class="item">
+            <div class="ui small image">
+              <img src="assets/images/avatar/nan.jpg">
+            </div>
+            <div class="content">
+              <div class="header">Никита Ефимов</div>
+              <div class="meta">
+                <span>Просто клевый парень, Selectel</span>          
+              </div>
+              <div class="description">
+                <p>
+                  Не следует, однако забывать, что укрепление и развитие структуры требуют от нас анализа дальнейших направлений развития. Товарищи! дальнейшее развитие различных форм деятельности требуют определения и уточнения соответствующий условий активизации.
+                </p>
+              </div>
+            </div>
+          </div>  
+        </div>       
+      </div>              
     </div>
   </div>
 
@@ -535,42 +541,32 @@
         </div>
         <div class="column">
           <div class="ui segment">
-            <div class="ui orange ribbon label">
-              Золотой партнер
-            </div>
             <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <p>Золотой партнер</p>
           </div> 
         </div>
         <div class="column">
           <div class="ui segment">
-            <div class="ui orange ribbon label">
-              Золотой партнер
-            </div>
             <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <p>Золотой партнер</p>
           </div>            
         </div>   
         <div class="column">
           <div class="ui segment">
-            <div class="ui orange ribbon label">
-              Золотой партнер
-            </div>
             <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <p>Золотой партнер</p>
           </div>
         </div>
         <div class="column">
           <div class="ui segment">
-            <div class="ui orange ribbon label">
-              Золотой партнер
-            </div>
             <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <p>Золотой партнер</p>
           </div> 
         </div>
         <div class="column">
           <div class="ui segment">
-            <div class="ui orange ribbon label">
-              Золотой партнер
-            </div>
             <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <p>Золотой партнер</p>
           </div>            
         </div>                     
       </div>
@@ -679,7 +675,8 @@
   <div class="ui vertically divided stackable grid container">
       <div class="row">
         <div class="center aligned three wide column">
-          <h1>11:00 - 12:00</h1>           
+          <h1>11:00</h1> 
+          <p>11:40</p>          
         </div>
         <div class="right floated thirteen wide column">
           <h3 class="ui header">Персональные данные в облаке с технической и правовой стороны вопроса. / Microsoft Azure. От теории к практике</h3>
@@ -700,7 +697,8 @@
       </div>
       <div class="row">
         <div class="center aligned three wide column">
-          <h1>11:00 - 12:00</h1>           
+          <h1>11:00</h1> 
+          <p>11:40</p>            
         </div>
         <div class="right floated thirteen wide column">
           <h3 class="ui header">Персональные данные в облаке с технической и правовой стороны вопроса. / Microsoft Azure. От теории к практике</h3>
