optimization for mobile

--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -249,10 +249,10 @@
   <!-- About -->
 
   <div class="ui vertical stripe segment">
+    <a class="anchor" id="about_a"></a>
     <div class="ui center aligned container">
-        <h1>
-        О мероприятии
-        <a class="anchor" id="about_a"></a>
+        <h1 class="header">
+        О мероприятии      
         </h1>      
     </div>      
 
@@ -289,7 +289,7 @@
         </div>      
       </div>
     </div>
-    <div class="ui eight column stackable grid container">
+    <div class="ui eight column doubling grid container">
       <div class="row">
         <div class="column">
           <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
@@ -394,7 +394,7 @@
         </h1>      
     </div> 
 
-    <div class="ui four link cards column grid container communities">
+    <div class="ui four link cards column doubling grid container communities">
       <div class="card">
         <div class="center aligned content">
           <div class="header">
@@ -532,7 +532,7 @@
         Партнеры мероприятия
         </h1>      
     </div> 
-      <div class="ui six column center aligned stackable grid container">
+      <div class="ui six column center aligned doubling grid container">
         <div class="column">
           <div class="ui segment">
             <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
@@ -585,7 +585,7 @@
         Информационные партнеры
         </h1>      
     </div> 
-      <div class="ui six column grid container">
+      <div class="ui six column doubling grid container">
         <div class="column">
           <div class="ui segment">
             <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
