optimization for mobile

--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -401,7 +401,7 @@
           SPb Cloud & Virtualization Community
           </div>
         </div>
-        <div class="center aligned extra content">
+        <div class="center aligned doubling grid extra content">
               <a class="ui basic label">13:00</a>  
               <a class="ui basic label">14:00</a> 
               <a class="ui basic label">15:00</a> 
@@ -534,38 +534,38 @@
     </div> 
       <div class="ui six column center aligned doubling grid container">
         <div class="column">
-          <div class="ui segment">
-            <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+          <div class="ui segment">          
+            <img class="ui image" src="assets/images/wireframe/white-image.png">          
             <p>Золотой партнер</p>
           </div>
         </div>
         <div class="column">
           <div class="ui segment">
-            <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <img class="ui image" src="assets/images/wireframe/white-image.png">
             <p>Золотой партнер</p>
           </div> 
         </div>
         <div class="column">
           <div class="ui segment">
-            <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <img class="ui image" src="assets/images/wireframe/white-image.png">
             <p>Золотой партнер</p>
           </div>            
         </div>   
         <div class="column">
           <div class="ui segment">
-            <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <img class="ui image" src="assets/images/wireframe/white-image.png">
             <p>Золотой партнер</p>
           </div>
         </div>
         <div class="column">
           <div class="ui segment">
-            <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <img class="ui image" src="assets/images/wireframe/white-image.png">
             <p>Золотой партнер</p>
           </div> 
         </div>
         <div class="column">
           <div class="ui segment">
-            <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <img class="ui image" src="assets/images/wireframe/white-image.png">
             <p>Золотой партнер</p>
           </div>            
         </div>                     
@@ -588,32 +588,32 @@
       <div class="ui six column doubling grid container">
         <div class="column">
           <div class="ui segment">
-            <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <img class="ui image" src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
           </div>
         </div>
         <div class="column">
           <div class="ui segment">
-            <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <img class="ui image" src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
           </div> 
         </div>
         <div class="column">
           <div class="ui segment">
-            <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <img class="ui image" src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
           </div>            
         </div>   
         <div class="column">
           <div class="ui segment">
-            <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <img class="ui image" src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
           </div>
         </div>
         <div class="column">
           <div class="ui segment">
-            <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <img class="ui image" src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
           </div> 
         </div>
         <div class="column">
           <div class="ui segment">
-            <img src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
+            <img class="ui image" src="assets/images/wireframe/white-image.png" class="ui small bordered rounded image">
           </div>            
         </div>                     
       </div>      
