--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -17,25 +17,10 @@
     #share .sticky {
       top: 150px;
     }
+
     #firstslide {
       min-height: 700px;
       padding: 1em 0em;
-      /*background: url('./assets/images/photos/bg_main.jpg') center center no-repeat; 
-      -webkit-background-size: cover; 
-      -moz-background-size: cover; 
-      -o-background-size: cover; 
-      background-size: cover; 
-      background-attachment: fixed;       
-      position: relative; 
-      overflow:hidden;    
-        -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);*/  
-    }
-    #firstslide {
-      min-height: 700px;
       background: url('./assets/images/photos/bg_main1.jpg') center center no-repeat; 
       -webkit-background-size: cover; 
       -moz-background-size: cover; 
@@ -690,6 +675,12 @@
     </div>     
   </div>
   <!-- endof Map -->
+
+  <!-- Footer -->
+  <div class="ui inverted vertical stripe segment">
+
+  </div>
+  <!--endof Footer -->
 
 </div>
 
